Make the Steam Hatches co-operate better.