@@ -1,5 +1,7 @@
 package io.github.createtechified.evolutioncore.common.machine.primitive;
 
+import brachy.modularui.value.sync.FluidSlotSyncHandler;
+import brachy.modularui.widgets.slot.FluidSlot;
 import com.gregtechceu.gtceu.api.GTValues;
 import com.gregtechceu.gtceu.api.blockentity.BlockEntityCreationInfo;
 import com.gregtechceu.gtceu.api.machine.TickableSubscription;
@@ -16,6 +18,7 @@ import com.gregtechceu.gtceu.common.mui.GTGuiTextures;
 import com.gregtechceu.gtceu.config.ConfigHolder;
 import com.gregtechceu.gtceu.utils.GTUtil;
 
+import io.github.createtechified.evolutioncore.common.registry.recipes.EvoRecipeTypes;
 import net.minecraft.MethodsReturnNonnullByDefault;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
@@ -50,6 +53,7 @@ import lombok.Getter;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.Set;
 
 import javax.annotation.Nullable;
@@ -90,7 +94,12 @@ public class PrimitiveOreFactoryMachine extends PrimitiveWorkableMachine impleme
     }
 
     public Set<BlockPos> saveOffsets() {
-        return Collections.singleton(new BlockPos(getFrontFacing().getOpposite().getNormal()));
+        Direction back = getFrontFacing().getOpposite();
+        Direction up = RelativeDirection.UP.getRelativeFacing(getFrontFacing(), getUpwardsFacing(), isFlipped());
+        BlockPos targetPos = getBlockPos()
+                .relative(up, 7)
+                .relative(back, 3);
+        return Set.of(targetPos.subtract(getBlockPos()));
     }
 
     @Override
@@ -100,8 +109,8 @@ public class PrimitiveOreFactoryMachine extends PrimitiveWorkableMachine impleme
         if (isFormed) {
             var pos = this.getBlockPos();
             var facing = this.getFrontFacing().getOpposite();
-            float xPos = facing.getStepX() * 0.76F + pos.getX() + 0.5F;
-            float yPos = facing.getStepY() * 0.76F + pos.getY() + 0.25F;
+            float xPos = facing.getStepX() * 0.76F + pos.getX() - 1.5F;
+            float yPos = facing.getStepY() * 0.76F + pos.getY() + 8.25F;
             float zPos = facing.getStepZ() * 0.76F + pos.getZ() + 0.5F;
 
             var up = RelativeDirection.UP.getRelativeFacing(getFrontFacing(), getUpwardsFacing(), isFlipped());
@@ -154,12 +163,13 @@ public class PrimitiveOreFactoryMachine extends PrimitiveWorkableMachine impleme
 
         progressWidget.listenGuiAction((IGuiAction.MousePressed) (guiContext, i) -> {
             if (!guiContext.isMouseAbove(progressWidget)) return false;
-            if (!GTRecipeTypes.PRIMITIVE_BLAST_FURNACE_RECIPES.getCategory().isXEIVisible()) return false;
-            GTUtil.openRecipeViewerCategory(GTRecipeTypes.PRIMITIVE_BLAST_FURNACE_RECIPES.getCategory());
+            if (!EvoRecipeTypes.PRIMITIVE_ORE_FACTORY.getCategory().isXEIVisible()) return false;
+            GTUtil.openRecipeViewerCategory(EvoRecipeTypes.PRIMITIVE_ORE_FACTORY.getCategory());
             return true;
         });
 
-        row.child(createImportItemSlot(syncManager, theme))
+        row.child(createImportItemSlot(syncManager, theme).margin(0, 4, 0, 0))
+                .child(createImportFluidSlot(syncManager, theme))
                 .child(progressWidget)
                 .child(createExportItemSlot(syncManager, theme));
 
@@ -189,9 +199,16 @@ public class PrimitiveOreFactoryMachine extends PrimitiveWorkableMachine impleme
     private SlotGroupWidget createExportItemSlot(PanelSyncManager syncManager, ITheme theme) {
         int size = exportItems.storage.getSlots();
         SlotGroup slotGroup = new SlotGroup("export", size);
-        String[] matrix = new String[1];
+        int cols = (int) Math.ceil(size / 2.0);
         char key = 'I';
-        matrix[0] = String.valueOf(key).repeat(size);
+        String[] matrix = new String[2];
+        StringBuilder row1 = new StringBuilder();
+        StringBuilder row2 = new StringBuilder();
+        for (int i = 0; i < cols; i++) { row1.append(key); }
+        for (int i = cols; i < size; i++) { row2.append(key); }
+        while (row2.length() < cols) { row2.append(' '); }
+        matrix[0] = row1.toString();
+        matrix[1] = row2.toString();
         return SlotGroupWidget.builder()
                 .matrix(matrix)
                 .key(key, i -> {
@@ -201,10 +218,25 @@ public class PrimitiveOreFactoryMachine extends PrimitiveWorkableMachine impleme
                     syncManager.syncValue("export", i, syncHandler);
                     return new ItemSlot()
                             .syncHandler("export", i)
-                            .background(theme.getItemSlotTheme().theme().getBackground(),
-                                    (i == 0) ? GTGuiTextures.PRIMITIVE_DUST_OVERLAY : (i == 1) ? GTGuiTextures.PRIMITIVE_DUST_OVERLAY : (i == 2) ? GTGuiTextures.PRIMITIVE_DUST_OVERLAY : (i == 3) ? GTGuiTextures.PRIMITIVE_DUST_OVERLAY : (i == 4) ? GTGuiTextures.PRIMITIVE_DUST_OVERLAY : GTGuiTextures.PRIMITIVE_DUST_OVERLAY);
-                })
-                .build();
+                            .background(theme.getItemSlotTheme().theme().getBackground(), GTGuiTextures.PRIMITIVE_DUST_OVERLAY);
+                }).build();
+    }
+
+    private SlotGroupWidget createImportFluidSlot(PanelSyncManager syncManager, ITheme theme) {
+        int size = importFluids.getStorages().length;
+        String[] matrix = new String[size];
+        char key = 'F';
+        Arrays.fill(matrix, String.valueOf(key));
+        return SlotGroupWidget.builder()
+                .matrix(matrix)
+                .key(key, i -> {
+                    var tank = importFluids.getStorages()[i];
+                    FluidSlotSyncHandler syncHandler = new FluidSlotSyncHandler(tank);
+                    syncManager.syncValue("import_fluid", i, syncHandler);
+                    return new FluidSlot()
+                            .syncHandler("import_fluid", i)
+                            .background(theme.getFluidSlotTheme().theme().getBackground(), GTGuiTextures.SLOT_PRIMITIVE);
+                }).build();
     }
 
     @Override
@@ -237,9 +269,12 @@ public class PrimitiveOreFactoryMachine extends PrimitiveWorkableMachine impleme
     }
 
     private void hurtEntitiesAndBreakSnow() {
-        BlockPos middlePos = getBlockPos().offset(getFrontFacing().getOpposite().getNormal());
+        Direction back = getFrontFacing().getOpposite();
+        Direction up = RelativeDirection.UP.getRelativeFacing(getFrontFacing(), getUpwardsFacing(), isFlipped());
+        BlockPos middlePos = getBlockPos()
+                .relative(up, 7)
+                .relative(back, 3);
         getLevel().getEntities(null, new AABB(middlePos)).forEach(e -> e.hurt(e.damageSources().lava(), 3.0f));
-
         if (getOffsetTimer() % 10 == 0) {
             BlockState state = getLevel().getBlockState(middlePos);
             GTUtil.tryBreakSnow(getLevel(), middlePos, state, true);
